--- a/exit.html
+++ b/exit.html
@@ -43,7 +43,7 @@
     document.getElementById("back").addEventListener('click',function(event){
 event.preventDefault();
 
-window.location.href="feedbackui.html";
+window.location.href="https://feedbackform.tiiny.site/"; 
     });
 </script>
 </body>
